2004-04-24  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/dialogs/stroke-style.cpp: #include prefix.h.

	* src/Makefile.am (EXTRA_DIST): Add */makefile.in.

	* src/libnr/Makefile_insert (libnr_libnr_a_SOURCES):
	  Add libnr/nr-convex-hull.h, needed by sp-canvas.cpp.

2004-04-24  Ted Gould  <ted@gould.cx>

	* src/Makefile_include, src/prefix.cpp:

	Removing the redefition of NULL and adding to the make system.

2004-04-24  Ted Gould  <ted@gould.cx>

	* src/extension/db.cpp, src/extension/db.h, src/extension/extension.cpp,
	src/extension/extension.h, src/extension/init.cpp,
	src/extension/internal/eps-out.cpp, src/extension/internal/eps-out.h,
	src/extension/internal/ps-out.cpp, src/extension/internal/ps-out.h:

	Adding in more checks for individual extensions.  All of them
	should still pass though.  Also, moved the extension database from
	glib to STL.  This allows extensions to be deleted while using the
	foreach functions (which causes instability with the glib hash
	table).

2004-04-24  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/dialogs/Makefile_insert:
	* src/display/Makefile_insert:
	* src/xml/Makefile_insert:
	  Get rid of unneeded CPPFLAGS specification.

	* src/Makefile.am:
	* src/Makefile_insert:
	  New generated file inkscape_version.h, to replace
	  -DINKSCAPE_VERSION=\"$(VERSION)\".
	* src/help.cpp: #include it.

2004-04-23  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/sp-polygon.cpp:
	* src/splivarot.cpp:
	* src/style.cpp:
	Change include stringstream.h to include svg/stringstream.h.

	* src/Makefile.am, src/Makefile_insert: Change libinkscape.a use
	  to eliminate triple compilation of these object files.

	* src/Makefile.am: Use `subdir-objects' option.

	* src/Makefile.am: Add global INCLUDES setting.
	* src/*/Makefile_insert: Get rid of now-redundant $(INKSCAPE_CFLAGS)
	  from *_CPPFLAGS.

	* src/*/makefile.in: `%' as a target doesn't behave as intended,